chore: updated C docs

--- a/c/html/develop/igraph-Advanced.html
+++ b/c/html/develop/igraph-Advanced.html
@@ -422,7 +422,7 @@ The standard way to report progress from an igraph function
 <p>
 
 
-This is the more flexible version of <a class="link" href="igraph-Advanced.html#IGRAPH_PROGRESSF" title="2.3.2. IGRAPH_PROGRESSF — Report the progress of a calculation from an igraph function, printf-like (macro variant)."><code class="function">IGRAPH_PROGRESSF()</code></a>,
+This is the more flexible version of <a class="link" href="igraph-Advanced.html#IGRAPH_PROGRESS" title="2.3.1. IGRAPH_PROGRESS — Report the progress of a calculation from an igraph function (macro variant)."><code class="function">IGRAPH_PROGRESS()</code></a>,
 having a printf-like syntax. As this macro takes variable
 number of arguments, they must be all supplied as a single
 argument, enclosed in parentheses. <a class="link" href="igraph-Advanced.html#igraph_progressf" title="2.3.4. igraph_progressf — Report the progress of a calculation from an igraph function, printf-like."><code class="function">igraph_progressf()</code></a> is then
