--- a/c/html/develop/igraph-Arpack.html
+++ b/c/html/develop/igraph-Arpack.html
@@ -90,19 +90,34 @@ igraph_error_t igraph_blas_ddot(const igraph_vector_t *v1, const igraph_vector_t
 <tr>
 <td><p><span class="term"><em class="parameter"><code>res</code></em>:</span></p></td>
 <td><p>
-  Pointer to a real, the result will be stored here.</p></td>
+  Pointer to a real, the result will be stored here.
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
 
 Time complexity: O(n) where n is the length of the vectors.
 
 </p>
 <div class="hideshow" onClick="toggle(this, event)">
 <div class="example">
-<a name="id-1.30.2.3.6.1"></a><p class="title"><b>Example 29.1.  File <code class="code">examples/simple/blas.c</code></b></p>
+<a name="id-1.30.2.3.8.1"></a><p class="title"><b>Example 29.1.  File <code class="code">examples/simple/blas.c</code></b></p>
 <div class="example-contents">
 <pre class="programlisting"><span class="strong"><strong>#include</strong></span> &lt;igraph.h&gt;
 
@@ -1074,7 +1089,7 @@ igraph_error_t igraph_lapack_dsyevr(const igraph_matrix_t *A,
 
 
 Calls the DSYEVR LAPACK function to compute selected eigenvalues
-and, optionally, eigenvectors of a real symmetric matrix A.
+and, optionally, eigenvectors of a real symmetric matrix <code class="constant">A</code>.
 Eigenvalues and eigenvectors can be selected by specifying either
 a range of values or a range of indices for the desired eigenvalues.
 
@@ -1106,7 +1121,7 @@ See more in the LAPACK documentation.
        the corresponding eigenvectors) to calculate. Possible
        values are <code class="constant">IGRAPH_LAPACK_DSYEV_ALL</code>, all eigenvalues;
        <code class="constant">IGRAPH_LAPACK_DSYEV_INTERVAL</code>, all eigenvalues in the
-       half-open interval (vl,vu];
+       half-open interval <code class="literal">(vl, vu]</code>;
        <code class="constant">IGRAPH_LAPACK_DSYEV_SELECT</code>, the il-th through iu-th
        eigenvalues.
 </p></td>
@@ -1131,7 +1146,7 @@ See more in the LAPACK documentation.
 <td><p><span class="term"><em class="parameter"><code>vestimate</code></em>:</span></p></td>
 <td><p>
   An upper bound for the number of eigenvalues in
-       the (vl,vu] interval, if <em class="parameter"><code>which</code></em> is <code class="constant">IGRAPH_LAPACK_DSYEV_INTERVAL</code>. Memory is allocated only for
+       the <code class="literal">(vl, vu]</code> interval, if <em class="parameter"><code>which</code></em> is <code class="constant">IGRAPH_LAPACK_DSYEV_INTERVAL</code>. Memory is allocated only for
        the given number of eigenvalues (and eigenvectors), so this
        upper bound must be correct.
 </p></td>
@@ -1153,9 +1168,9 @@ See more in the LAPACK documentation.
 <td><p>
   The absolute error tolerance for the eigevalues. An
        approximate eigenvalue is accepted as converged when it is
-       determined to lie in an interval [a,b] of width less than or
-       equal to abstol + EPS * max(|a|,|b|), where EPS is the
-       machine precision.
+       determined to lie in an interval <code class="literal">[a,b]</code> of width
+       less than or equal to <code class="literal">abstol + EPS * max(|a|,|b|)</code>,
+       where <code class="constant">EPS</code> is the machine precision.
 </p></td>
 </tr>
 <tr>
@@ -1169,8 +1184,8 @@ See more in the LAPACK documentation.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>vectors</code></em>:</span></p></td>
 <td><p>
-  An initialized matrix, the eigenvectors are stored
-       in its columns, unless it is a null pointer. It will be
+  An initialized matrix. A set of orthonormal eigenvectors
+       are stored in its columns, unless it is a null pointer. It will be
        resized as needed.
 </p></td>
 </tr>
