--- a/c/html/develop/igraph-Foreign.html
+++ b/c/html/develop/igraph-Foreign.html
@@ -2139,7 +2139,7 @@ useful information and sample files at
 </p></td>
 </tr>
 <tr>
-<td><p><span class="term"><em class="parameter"><code>file</code></em>:</span></p></td>
+<td><p><span class="term"><em class="parameter"><code>instream</code></em>:</span></p></td>
 <td><p>
   An already opened file handler.
 </p></td>
@@ -2597,12 +2597,27 @@ It is not recommended for data exchange or archival.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>outstream</code></em>:</span></p></td>
 <td><p>
-  The stream to write the file to.</p></td>
+  The stream to write the file to.
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
 
 Time complexity: should be proportional to the number of characters written
 to the file.
@@ -2626,7 +2641,7 @@ to the file.
 </p>
 <div class="hideshow" onClick="toggle(this, event)">
 <div class="example">
-<a name="id-1.22.11.2.11.1"></a><p class="title"><b>Example 21.11.  File <code class="code">examples/simple/dot.c</code></b></p>
+<a name="id-1.22.11.2.13.1"></a><p class="title"><b>Example 21.11.  File <code class="code">examples/simple/dot.c</code></b></p>
 <div class="example-contents">
 <pre class="programlisting"><span class="strong"><strong>#include</strong></span> &lt;igraph.h&gt;
 <span class="strong"><strong>#include</strong></span> &lt;stdio.h&gt;
