--- a/c/html/develop/igraph-Motifs.html
+++ b/c/html/develop/igraph-Motifs.html
@@ -26,7 +26,6 @@ langversion: develop
 <dt><span class="section"><a href="igraph-Motifs.html#igraph_triad_census">2. <code class="function">igraph_triad_census</code> —  Triad census, as defined by Davis and Leinhardt.</a></span></dt>
 <dt><span class="section"><a href="igraph-Motifs.html#finding-triangles">3. Finding triangles</a></span></dt>
 <dt><span class="section"><a href="igraph-Motifs.html#graph-motifs">4. Graph motifs</a></span></dt>
-<dt><span class="section"><a href="igraph-Motifs.html#deprecated-motifs">5. Deprecated functions</a></span></dt>
 </dl></div>
 <p>
 This section deals with functions which find small induced subgraphs in a
@@ -633,7 +632,7 @@ matrix (see the example).
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
   <a class="link" href="igraph-Motifs.html#igraph_count_triangles" title="3.2. igraph_count_triangles — Counts triangles in a graph."><code class="function">igraph_count_triangles()</code></a> to count the triangles,
-<a class="link" href="igraph-Motifs.html#igraph_adjacent_triangles" title="5.1. igraph_adjacent_triangles — Count the number of triangles a vertex is part of (deprecated alias)."><code class="function">igraph_adjacent_triangles()</code></a> to count the triangles a vertex
+<a class="link" href="igraph-Motifs.html#igraph_count_adjacent_triangles" title="3.1. igraph_count_adjacent_triangles — Count the number of triangles a vertex is part of."><code class="function">igraph_count_adjacent_triangles()</code></a> to count the triangles a vertex
 participates in, <a class="link" href="igraph-Structural.html#igraph_transitivity_undirected" title="16.1. igraph_transitivity_undirected — Calculates the transitivity (clustering coefficient) of a graph."><code class="function">igraph_transitivity_undirected()</code></a> to compute
 the global clustering coefficient.
   </p></td>
@@ -656,7 +655,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
     igraph_vector_int_t v;
     igraph_matrix_int_t result;
 
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_full" title="1.19. igraph_full — Creates a full graph (complete graph).">igraph_full</a></strong></span>(&amp;g, 5, 0, IGRAPH_NO_LOOPS);
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_full" title="1.21. igraph_full — Creates a full graph (complete graph).">igraph_full</a></strong></span>(&amp;g, 5, 0, IGRAPH_NO_LOOPS);
 
     <span class="strong"><strong>printf</strong></span>("Triangles in a full graph of 5 vertices:\n");
     <span class="strong"><strong>igraph_vector_int_init</strong></span>(&amp;v, 0);
@@ -852,7 +851,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 
     <span class="emphasis"><em>/* Compute the 4-motif distritbuion in Zachary's karate club network. */</em></span>
 
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_famous" title="1.25. igraph_famous — Create a famous graph by simply providing its name.">igraph_famous</a></strong></span>(&amp;graph, "Zachary");
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_famous" title="1.27. igraph_famous — Create a famous graph by simply providing its name.">igraph_famous</a></strong></span>(&amp;graph, "Zachary");
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_vector_init" title="2.2.1. igraph_vector_init — Initializes a vector object (constructor).">igraph_vector_init</a></strong></span>(&amp;hist, 0);
 
     <span class="strong"><strong><a class="link" href="igraph-Motifs.html#igraph_motifs_randesu" title="4.1. igraph_motifs_randesu — Count the number of motifs in a graph.">igraph_motifs_randesu</a></strong></span>(&amp;graph, &amp;hist, 4, NULL);
@@ -879,7 +878,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 
     <span class="emphasis"><em>/* Identify the vertices of each three-motif in a small Kautz graph. */</em></span>
 
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_kautz" title="1.31. igraph_kautz — Generate a Kautz graph.">igraph_kautz</a></strong></span>(&amp;graph, 2, 1);
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_kautz" title="1.34. igraph_kautz — Generate a Kautz graph.">igraph_kautz</a></strong></span>(&amp;graph, 2, 1);
     <span class="strong"><strong><a class="link" href="igraph-Motifs.html#igraph_motifs_randesu_callback" title="4.4. igraph_motifs_randesu_callback — Finds motifs in a graph and calls a function for each of them.">igraph_motifs_randesu_callback</a></strong></span>(&amp;graph, 3, NULL, &amp;print_motif, NULL);
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;graph);
 
@@ -1247,7 +1246,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 
     <span class="emphasis"><em>/* Compute the 4-motif distritbuion in Zachary's karate club network. */</em></span>
 
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_famous" title="1.25. igraph_famous — Create a famous graph by simply providing its name.">igraph_famous</a></strong></span>(&amp;graph, "Zachary");
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_famous" title="1.27. igraph_famous — Create a famous graph by simply providing its name.">igraph_famous</a></strong></span>(&amp;graph, "Zachary");
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_vector_init" title="2.2.1. igraph_vector_init — Initializes a vector object (constructor).">igraph_vector_init</a></strong></span>(&amp;hist, 0);
 
     <span class="strong"><strong><a class="link" href="igraph-Motifs.html#igraph_motifs_randesu" title="4.1. igraph_motifs_randesu — Count the number of motifs in a graph.">igraph_motifs_randesu</a></strong></span>(&amp;graph, &amp;hist, 4, NULL);
@@ -1274,7 +1273,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 
     <span class="emphasis"><em>/* Identify the vertices of each three-motif in a small Kautz graph. */</em></span>
 
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_kautz" title="1.31. igraph_kautz — Generate a Kautz graph.">igraph_kautz</a></strong></span>(&amp;graph, 2, 1);
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_kautz" title="1.34. igraph_kautz — Generate a Kautz graph.">igraph_kautz</a></strong></span>(&amp;graph, 2, 1);
     <span class="strong"><strong><a class="link" href="igraph-Motifs.html#igraph_motifs_randesu_callback" title="4.4. igraph_motifs_randesu_callback — Finds motifs in a graph and calls a function for each of them.">igraph_motifs_randesu_callback</a></strong></span>(&amp;graph, 3, NULL, &amp;print_motif, NULL);
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;graph);
 
@@ -1383,102 +1382,6 @@ the following arguments:
 </tr></tbody>
 </table></div>
 <p>
- 
-</p>
-</div>
-</div>
-<div class="section">
-<div class="titlepage"><div><div><h2 class="title" style="clear: both">
-<a name="deprecated-motifs"></a>5. Deprecated functions</h2></div></div></div>
-<div class="toc"><dl class="toc"><dt><span class="section"><a href="igraph-Motifs.html#igraph_adjacent_triangles">5.1. <code class="function">igraph_adjacent_triangles</code> —  Count the number of triangles a vertex is part of (deprecated alias).</a></span></dt></dl></div>
-<div class="section">
-<div class="titlepage"><div><div><h3 class="title">
-<a name="igraph_adjacent_triangles"></a>5.1. <code class="function">igraph_adjacent_triangles</code> —  Count the number of triangles a vertex is part of (deprecated alias).</h3></div></div></div>
-<a class="indexterm" name="id-1.20.7.2.2"></a><p>
-</p>
-<div class="informalexample"><pre class="programlisting">
-igraph_error_t igraph_adjacent_triangles(const igraph_t *graph,
-                                         igraph_vector_t *res,
-                                         const igraph_vs_t vids);
-</pre></div>
-<p>
-</p>
-<p>
-
-
-
-</p>
-<div class="warning" style="margin-left: 0.5in; margin-right: 0.5in;">
-<h3 class="title">Warning</h3>
-<p>Deprecated since version 0.10.15. Please do not use this function in new
-code; use <a class="link" href="igraph-Motifs.html#igraph_count_adjacent_triangles" title="3.1. igraph_count_adjacent_triangles — Count the number of triangles a vertex is part of."><code class="function">igraph_count_adjacent_triangles()</code></a>
-instead.</p>
-</div>
-<p>
-</p>
-<p><b>Arguments: </b>
-</p>
-<div class="variablelist"><table border="0" class="variablelist">
-<colgroup>
-<col align="left" valign="top">
-<col>
-</colgroup>
-<tbody>
-<tr>
-<td><p><span class="term"><em class="parameter"><code>graph</code></em>:</span></p></td>
-<td><p>
-  The input graph. Edge directions and multiplicities are ignored.
-</p></td>
-</tr>
-<tr>
-<td><p><span class="term"><em class="parameter"><code>res</code></em>:</span></p></td>
-<td><p>
-  Initiliazed vector, the results are stored here.
-</p></td>
-</tr>
-<tr>
-<td><p><span class="term"><em class="parameter"><code>vids</code></em>:</span></p></td>
-<td><p>
-  The vertices to perform the calculation for.
-</p></td>
-</tr>
-</tbody>
-</table></div>
-<p>
-</p>
-<p><b>Returns: </b></p>
-<div class="variablelist"><table border="0" class="variablelist">
-<colgroup>
-<col align="left" valign="top">
-<col>
-</colgroup>
-<tbody><tr>
-<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
-<td><p>
-  Error mode.
-  </p></td>
-</tr></tbody>
-</table></div>
-<p>
-
-</p>
-<p><b>See also: </b></p>
-<div class="variablelist"><table border="0" class="variablelist">
-<colgroup>
-<col align="left" valign="top">
-<col>
-</colgroup>
-<tbody><tr>
-<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
-<td><p>
-  <a class="link" href="igraph-Motifs.html#igraph_list_triangles" title="3.3. igraph_list_triangles — Find all triangles in a graph."><code class="function">igraph_list_triangles()</code></a> to list them.
-  </p></td>
-</tr></tbody>
-</table></div>
-<p>
-
-Time complexity: O(d^2 n), d is the average vertex degree of the
-queried vertices, n is their number.
  
 </p>
 </div>
