--- a/c/html/develop/igraph-Nongraph.html
+++ b/c/html/develop/igraph-Nongraph.html
@@ -14,7 +14,7 @@ langversion: develop
               Previous
             </a><a accesskey="h" class="btn btn-light" href="index.html"><i class="fa fa-home"></i>
               Home
-            </a><a accesskey="n" class="btn btn-light" href="igraph-Licenses.html"><i class="fa fa-chevron-right"></i>
+            </a><a accesskey="n" class="btn btn-light" href="igraph-Glossary.html"><i class="fa fa-chevron-right"></i>
               Next
             </a>
 </div></div>
@@ -1100,12 +1100,26 @@ environment variable to 1.
 <td><p>
   The desired precision of the p-value. Higher values correspond
        to longer calculation time.
-@return igraph_error_t</p></td>
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
  
 </p>
 </div>
@@ -1347,6 +1361,6 @@ to each other with a given level of tolerance on the relative error.
 </div>
 <table class="navigation-footer" width="100%" summary="Navigation footer" cellpadding="2" cellspacing="0"><tr valign="middle">
 <td align="left"><a accesskey="p" href="igraph-Advanced.html"><b>← Chapter 31. Advanced igraph programming</b></a></td>
-<td align="right"><a accesskey="n" href="igraph-Licenses.html"><b>Chapter 33. Licenses for igraph and this manual →</b></a></td>
+<td align="right"><a accesskey="n" href="igraph-Glossary.html"><b>Chapter 33. Glossary →</b></a></td>
 </tr></table>
 {% endraw %}
