--- a/c/html/develop/index.html
+++ b/c/html/develop/index.html
@@ -63,9 +63,9 @@ langversion: develop
 </div>
 </div>
 </div></div>
-<div><p class="releaseinfo">0.10.16-610-gb9efa5de8</p></div>
+<div><p class="releaseinfo">0.10.16-728-g14afc3fbc</p></div>
 <div><div class="legalnotice">
-<a name="id-1.1.4"></a><p>This manual is for igraph, version 0.10.16-610-gb9efa5de8.</p>
+<a name="id-1.1.4"></a><p>This manual is for igraph, version 0.10.16-728-g14afc3fbc.</p>
 <p>
       Copyright (C) 2005-2019 Gábor Csárdi and Tamás Nepusz.
       Copyright (C) 2020-2025 igraph development team.
@@ -113,7 +113,8 @@ langversion: develop
 <dt><span class="chapter"><a href="igraph-Bipartite.html">30. Bipartite, i.e. two-mode graphs</a></span></dt>
 <dt><span class="chapter"><a href="igraph-Advanced.html">31. Advanced igraph programming</a></span></dt>
 <dt><span class="chapter"><a href="igraph-Nongraph.html">32. Non-graph related functions </a></span></dt>
-<dt><span class="chapter"><a href="igraph-Licenses.html">33. Licenses for igraph and this manual</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Glossary.html">33. Glossary</a></span></dt>
+<dt><span class="chapter"><a href="igraph-Licenses.html">34. Licenses for igraph and this manual</a></span></dt>
 <dt><span class="index"><a href="ix01.html">Index</a></span></dt>
 </dl></div>
 </div>
