--- a/c/html/master/igraph-Community.html
+++ b/c/html/master/igraph-Community.html
@@ -335,12 +335,27 @@ matrix and degrees are used.
 <td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
   For directed graphs: if the edges should be treated as
-                  undirected. For undirected graphs this is ignored.</p></td>
+                  undirected. For undirected graphs this is ignored.
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
 
 </p>
 <p><b>See also: </b></p>
@@ -662,12 +677,27 @@ lines in <em class="parameter"><code>merges</code></em>.
 <td><p>
   Pointer to an initialized vector, or NULL. If not NULL
    then the sizes of the components will be stored here, the vector
-   will be resized as needed.</p></td>
+   will be resized as needed.
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
 
 </p>
 <p><b>See also: </b></p>
@@ -744,12 +774,27 @@ range 0, ..., n - 1.
   Pointer to an integer for the number of
                     distinct clusters. If not <code class="constant">NULL</code>, this will be
                     updated to reflect the number of distinct
-                    clusters found in membership.</p></td>
+                    clusters found in membership.
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
 
 Time complexity: should be O(n) for n elements.
  
@@ -2542,18 +2587,18 @@ connected.
 </p></td>
 </tr>
 <tr>
+<td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
+<td><p>
+  Whether to use the directed or undirected version
+   of modularity. Will be ignored for undirected graphs.
+</p></td>
+</tr>
+<tr>
 <td><p><span class="term"><em class="parameter"><code>edges</code></em>:</span></p></td>
 <td><p>
   Vector containing the edges to be removed from the
    network, all edges are expected to appear exactly once in the
    vector.
-</p></td>
-</tr>
-<tr>
-<td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
-<td><p>
-  Whether to use the directed or undirected version
-   of modularity. Will be ignored for undirected graphs.
 </p></td>
 </tr>
 <tr>
@@ -3393,14 +3438,6 @@ Springer, vol 689, p 229. <a class="ulink" href="https://doi.org/10.1007/978-3-3
 they are assigned to.
 </p></td>
 </tr>
-<tr>
-<td><p><span class="term"><em class="parameter"><code>modularity</code></em>:</span></p></td>
-<td><p>
-  If not a null pointer, then it must be a pointer
-  to a real number. The modularity score of the detected community
-  structure is stored here.
-</p></td>
-</tr>
 </tbody>
 </table></div>
 <p>
@@ -3565,16 +3602,6 @@ Network Clustering and Blockmodeling" edited by P. Doreian, V. Batagelj
   different communities.
 </p></td>
 </tr>
-<tr>
-<td><p><span class="term"><em class="parameter"><code>modularity</code></em>:</span></p></td>
-<td><p>
-  If not a null pointer, then it must be a pointer
-  to a real number. The modularity score of the detected community
-  structure is stored here. Note that igraph will calculate the
-  <span class="emphasis"><em>directed</em></span> modularity if the input graph is directed, even if
-  you set <em class="parameter"><code>mode</code></em> to <code class="constant">IGRAPH_ALL</code>
-</p></td>
-</tr>
 </tbody>
 </table></div>
 <p>
@@ -3609,7 +3636,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
     igraph_vector_int_t membership;
     igraph_real_t modularity;
 
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_famous" title="1.25. igraph_famous — Create a famous graph by simply providing its name.">igraph_famous</a></strong></span>(&amp;graph, "Zachary"); <span class="emphasis"><em>/* We use Zachary's karate club network. */</em></span>
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_famous" title="1.27. igraph_famous — Create a famous graph by simply providing its name.">igraph_famous</a></strong></span>(&amp;graph, "Zachary"); <span class="emphasis"><em>/* We use Zachary's karate club network. */</em></span>
 
     <span class="emphasis"><em>/* Label propagation is a stochastic method; the result will depend on the random seed. */</em></span>
     <span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_seed" title="3.3. igraph_rng_seed — Seeds a random number generator.">igraph_rng_seed</a></strong></span>(<span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_default" title="2.1. igraph_rng_default — Query the default random number generator.">igraph_rng_default</a></strong></span>(), 123);
