--- a/c/html/master/igraph-Error.html
+++ b/c/html/master/igraph-Error.html
@@ -943,34 +943,12 @@ a function that uses <span class="command"><strong>igraph</strong></span>.
 <td><p><span class="term"><em class="parameter"><code>line</code></em>:</span></p></td>
 <td><p>
   The number of line in the source file which triggered the
-        warning.
-</p></td>
-</tr>
-<tr>
-<td><p><span class="term"><em class="parameter"><code>igraph_errno</code></em>:</span></p></td>
-<td><p>
-  Warnings could have potentially error codes as well,
-       but this is currently not used in igraph.
-</p></td>
+        warning.</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-</p>
-<p><b>Returns: </b></p>
-<div class="variablelist"><table border="0" class="variablelist">
-<colgroup>
-<col align="left" valign="top">
-<col>
-</colgroup>
-<tbody><tr>
-<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
-<td><p>
-  The supplied error code.
-  </p></td>
-</tr></tbody>
-</table></div>
-<p>
+
  
 </p>
 </div>
@@ -1019,13 +997,6 @@ into the <em class="parameter"><code>reason</code></em> template string and call
 <td><p>
   The number of line in the source file which triggered the
         warning.
-</p></td>
-</tr>
-<tr>
-<td><p><span class="term"><em class="parameter"><code>igraph_errno</code></em>:</span></p></td>
-<td><p>
-  Warnings could have potentially error codes as well,
-       but this is currently not used in igraph.
 </p></td>
 </tr>
 <tr>
@@ -1081,14 +1052,7 @@ This warning handler function simply ignores all warnings.
 <td><p><span class="term"><em class="parameter"><code>line</code></em>:</span></p></td>
 <td><p>
   The number of line in the source file which triggered the
-        warning..
-</p></td>
-</tr>
-<tr>
-<td><p><span class="term"><em class="parameter"><code>igraph_errno</code></em>:</span></p></td>
-<td><p>
-  Warnings could have potentially error codes as well,
-       but this is currently not used in igraph.</p></td>
+        warning..</p></td>
 </tr>
 </tbody>
 </table></div>
@@ -1138,14 +1102,7 @@ standard error.
 <td><p><span class="term"><em class="parameter"><code>line</code></em>:</span></p></td>
 <td><p>
   The number of line in the source file which triggered the
-        warning..
-</p></td>
-</tr>
-<tr>
-<td><p><span class="term"><em class="parameter"><code>igraph_errno</code></em>:</span></p></td>
-<td><p>
-  Warnings could have potentially error codes as well,
-       but this is currently not used in igraph.</p></td>
+        warning..</p></td>
 </tr>
 </tbody>
 </table></div>
@@ -1455,7 +1412,7 @@ supplied arguments.
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  the error code (if it returns)
+  The error code (if it returns).
   </p></td>
 </tr></tbody>
 </table></div>
@@ -1532,12 +1489,27 @@ igraph_error_t igraph_errorf(const char *reason, const char *file, int line,
 <td><p><span class="term"><em class="parameter"><code>...</code></em>:</span></p></td>
 <td><p>
   Additional parameters, the values to substitute into the
-           format string.</p></td>
+           format string.
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  The error code (if it returns).
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
 
 </p>
 <p><b>See also: </b></p>
@@ -1892,7 +1864,7 @@ restore the error handler before they return.
 
     <span class="emphasis"><em>/* igraph_contract_vertices() preserves all edges, some of which become</em></span>
 <span class="emphasis"><em>     * parallel edges or self-loops after the contraction. We simplify these. */</em></span>
-    <span class="strong"><strong><a class="link" href="igraph-Error.html#IGRAPH_CHECK" title="5.2.5. IGRAPH_CHECK — Checks the return value of a function call.">IGRAPH_CHECK</a></strong></span>(<span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(cond, <span class="emphasis"><em>/* remove_multiple */</em></span> true, <span class="emphasis"><em>/* remove_loops */</em></span> true, NULL));
+    <span class="strong"><strong><a class="link" href="igraph-Error.html#IGRAPH_CHECK" title="5.2.5. IGRAPH_CHECK — Checks the return value of a function call.">IGRAPH_CHECK</a></strong></span>(<span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.10. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(cond, <span class="emphasis"><em>/* remove_multiple */</em></span> true, <span class="emphasis"><em>/* remove_loops */</em></span> true, NULL));
 
     <span class="emphasis"><em>/* Data structures that are no longer needed must be explicitly destroyed.</em></span>
 <span class="emphasis"><em>     * If they were added to the "finally" stack, they must be removed explicitly,</em></span>
