--- a/c/html/develop/igraph-Attributes.html
+++ b/c/html/develop/igraph-Attributes.html
@@ -232,7 +232,7 @@ It has the following members:
 <td><p>
   Called when new edges are added to a graph, after the
    base data structure was modified. A vector containing the endpoints of the
-   new edges are supplied as an argument. The function is supposd to set up
+   new edges are supplied as an argument. The function is supposed to set up
    default values for each edge attribute that is currently registered on the
    graph, for all the newly added edges. Expected to return an error code.
 </p></td>
@@ -245,7 +245,7 @@ It has the following members:
    attributes of some edges from the old graph (this also includes the
    deletion of edges). The supplied index vector defines which old edge a new
    edge corresponds to. Its length is the same as the number of edges in the
-   new graph, and for each edge it provides the ID of the correspnding edge
+   new graph, and for each edge it provides the ID of the corresponding edge
    in the old graph. The function is supposed to set up the values of the
    edge attributes of the new graph based on the attributes of the old graph
    and the provided index vector. Note that the old and the new graph <span class="emphasis"><em>may</em></span>
@@ -1253,7 +1253,7 @@ Time complexity: operating system dependent.
 a single one. Attribute combination lists are used to indicate to the attribute
 handler how to combine the attributes of the original vertices or edges and
 how to derive the final attribute value that is to be assigned to the collapsed
-vertex or edge. For example, <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> removes loops and combines
+vertex or edge. For example, <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.10. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> removes loops and combines
 multiple edges into a single one; in case of a graph with an edge attribute
 named <code class="constant">weight</code> the attribute combination list can tell the attribute handler
 whether the weight of a collapsed edge should be the sum, the mean or some other
@@ -1722,7 +1722,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
                                  "type",   IGRAPH_ATTRIBUTE_COMBINE_FIRST,
                                  "",       IGRAPH_ATTRIBUTE_COMBINE_IGNORE,
                                  IGRAPH_NO_MORE_ATTRIBUTES);
-    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(&amp;graph, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, &amp;comb);
+    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.10. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(&amp;graph, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, &amp;comb);
     <span class="strong"><strong><a class="link" href="igraph-Foreign.html#igraph_write_graph_graphml" title="3.2. igraph_write_graph_graphml — Writes the graph to a file in GraphML format.">igraph_write_graph_graphml</a></strong></span>(&amp;graph, stdout, <span class="emphasis"><em>/*prefixattr=*/</em></span> true);
 
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;graph);
@@ -1920,7 +1920,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
     <span class="strong"><strong><a class="link" href="igraph-Attributes.html#igraph_set_attribute_table" title="1.2. igraph_set_attribute_table — Attach an attribute table.">igraph_set_attribute_table</a></strong></span>(&amp;igraph_cattribute_table);
 
     <span class="emphasis"><em>/* Create a graph, add some attributes and save it as a GraphML file. */</em></span>
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_famous" title="1.25. igraph_famous — Create a famous graph by simply providing its name.">igraph_famous</a></strong></span>(&amp;g, "Petersen");
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_famous" title="1.27. igraph_famous — Create a famous graph by simply providing its name.">igraph_famous</a></strong></span>(&amp;g, "Petersen");
     <span class="strong"><strong><a class="link" href="igraph-Attributes.html#SETGAS" title="4.2.6. SETGAS — Set a string graph attribute">SETGAS</a></strong></span>(&amp;g, "name", "Petersen's graph");
     <span class="strong"><strong><a class="link" href="igraph-Attributes.html#SETGAN" title="4.2.2. SETGAN — Set a numeric graph attribute">SETGAN</a></strong></span>(&amp;g, "vertices", <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_vcount" title="4.2.1. igraph_vcount — The number of vertices in a graph.">igraph_vcount</a></strong></span>(&amp;g));
     <span class="strong"><strong><a class="link" href="igraph-Attributes.html#SETGAN" title="4.2.2. SETGAN — Set a numeric graph attribute">SETGAN</a></strong></span>(&amp;g, "edges", <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_ecount" title="4.2.2. igraph_ecount — The number of edges in a graph.">igraph_ecount</a></strong></span>(&amp;g));
@@ -1976,7 +1976,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 }
 
 <span class="strong"><strong>static</strong></span> void <span class="strong"><strong>simplify_write_destroy</strong></span>(igraph_t *g, igraph_attribute_combination_t *comb) {
-    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(g, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, comb);
+    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.10. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(g, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, comb);
     <span class="strong"><strong><a class="link" href="igraph-Foreign.html#igraph_write_graph_graphml" title="3.2. igraph_write_graph_graphml — Writes the graph to a file in GraphML format.">igraph_write_graph_graphml</a></strong></span>(g, stdout, <span class="emphasis"><em>/*prefixattr=*/</em></span> true);
     <span class="strong"><strong><a class="link" href="igraph-Attributes.html#igraph_attribute_combination_destroy" title="3.4. igraph_attribute_combination_destroy — Destroy attribute combination list.">igraph_attribute_combination_destroy</a></strong></span>(comb);
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(g);
@@ -2055,7 +2055,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 <pre class="programlisting"><span class="strong"><strong>#include</strong></span> &lt;igraph.h&gt;
 
 <span class="strong"><strong>static</strong></span> void <span class="strong"><strong>simplify_write_destroy</strong></span>(igraph_t *g, igraph_attribute_combination_t *comb) {
-    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(g, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, comb);
+    <span class="strong"><strong><a class="link" href="igraph-Operators.html#igraph_simplify" title="3.10. igraph_simplify — Removes loop and/or multiple edges from the graph.">igraph_simplify</a></strong></span>(g, <span class="emphasis"><em>/*remove_multiple=*/</em></span> true, <span class="emphasis"><em>/*remove_loops=*/</em></span> true, comb);
     <span class="strong"><strong><a class="link" href="igraph-Foreign.html#igraph_write_graph_graphml" title="3.2. igraph_write_graph_graphml — Writes the graph to a file in GraphML format.">igraph_write_graph_graphml</a></strong></span>(g, stdout, <span class="emphasis"><em>/*prefixattr=*/</em></span> true);
     <span class="strong"><strong><a class="link" href="igraph-Attributes.html#igraph_attribute_combination_destroy" title="3.4. igraph_attribute_combination_destroy — Destroy attribute combination list.">igraph_attribute_combination_destroy</a></strong></span>(comb);
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(g);
@@ -4307,7 +4307,7 @@ igraph_error_t igraph_cattribute_EASV(const igraph_t *graph, const char *name,
 </p></td>
 </tr>
 <tr>
-<td><p><span class="term"><em class="parameter"><code>vids</code></em>:</span></p></td>
+<td><p><span class="term"><em class="parameter"><code>eids</code></em>:</span></p></td>
 <td><p>
   The edges to query.
 </p></td>
