--- a/c/html/develop/igraph-Basic.html
+++ b/c/html/develop/igraph-Basic.html
@@ -99,7 +99,7 @@ graphs with self-loops. Most functions which do not support such graphs
 will check their input and issue an error if it is not valid. Those
 rare functions which do not perform this check clearly indicate this
 in their documentation. To eliminate multiple edges from a graph, you can use
-<a class="link" href="igraph-Operators.html#igraph_simplify" title="3.9. igraph_simplify — Removes loop and/or multiple edges from the graph.">
+<a class="link" href="igraph-Operators.html#igraph_simplify" title="3.10. igraph_simplify — Removes loop and/or multiple edges from the graph.">
   <code class="function">igraph_simplify()</code></a>.
 </p>
 </div>
@@ -1617,7 +1617,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
                         IGRAPH_UNDIRECTED, <span class="emphasis"><em>/*unconn=*/</em></span> true);
         <span class="strong"><strong>igraph_vector_int_update</strong></span>(&amp;pairs, &amp;path);
         <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_expand_path_to_pairs" title='5.3. igraph_expand_path_to_pairs — Helper function to convert a sequence of vertex IDs describing a path into a "pairs" vector.'>igraph_expand_path_to_pairs</a></strong></span>(&amp;pairs);
-        <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_get_eids" title="4.2.10. igraph_get_eids — Return edge IDs based on the adjacent vertices.">igraph_get_eids</a></strong></span>(&amp;g, &amp;eids, &amp;pairs, 0, <span class="emphasis"><em>/*error=*/</em></span> true);
+        <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_get_eids" title="4.2.10. igraph_get_eids — Return edge IDs based on the adjacent vertices.">igraph_get_eids</a></strong></span>(&amp;g, &amp;eids, &amp;pairs, <span class="emphasis"><em>/* directed= */</em></span> false, <span class="emphasis"><em>/*error=*/</em></span> true);
         <span class="strong"><strong>for</strong></span> (e = 0; e &lt; <span class="strong"><strong>igraph_vector_int_size</strong></span>(&amp;path) - 1; e++) {
             igraph_integer_t edge = <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#VECTOR" title="2.4.1. VECTOR — Accessing an element of a vector.">VECTOR</a></strong></span>(eids)[e];
             igraph_integer_t from1 = <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#VECTOR" title="2.4.1. VECTOR — Accessing an element of a vector.">VECTOR</a></strong></span>(path)[e];
@@ -2215,7 +2215,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
     }
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;g);
 
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_full" title="1.19. igraph_full — Creates a full graph (complete graph).">igraph_full</a></strong></span>(&amp;g, 10, IGRAPH_UNDIRECTED, IGRAPH_NO_LOOPS);
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_full" title="1.21. igraph_full — Creates a full graph (complete graph).">igraph_full</a></strong></span>(&amp;g, 10, IGRAPH_UNDIRECTED, IGRAPH_NO_LOOPS);
     <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_maxdegree" title="10.10. igraph_maxdegree — The maximum degree in a graph (or set of vertices).">igraph_maxdegree</a></strong></span>(&amp;g, &amp;mdeg, <span class="strong"><strong><a class="link" href="igraph-Iterators.html#igraph_vss_all" title="4.1. igraph_vss_all — All vertices of a graph (immediate version).">igraph_vss_all</a></strong></span>(), IGRAPH_ALL, IGRAPH_LOOPS);
     <span class="strong"><strong>if</strong></span> (mdeg != 9) {
         <span class="strong"><strong>exit</strong></span>(7);
@@ -2410,7 +2410,7 @@ a vector and add all of them via a single <a class="link" href="igraph-Basic.htm
 </colgroup>
 <tbody>
 <tr>
-<td><p><span class="term"><em class="parameter"><code>igraph</code></em>:</span></p></td>
+<td><p><span class="term"><em class="parameter"><code>graph</code></em>:</span></p></td>
 <td><p>
   The graph.
 </p></td>
