--- a/c/html/develop/igraph-Iterators.html
+++ b/c/html/develop/igraph-Iterators.html
@@ -463,7 +463,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;g);
 
     <span class="emphasis"><em>/* full graph, no vertices */</em></span>
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_full" title="1.19. igraph_full — Creates a full graph (complete graph).">igraph_full</a></strong></span>(&amp;g, 10, IGRAPH_UNDIRECTED, IGRAPH_LOOPS);
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_full" title="1.21. igraph_full — Creates a full graph (complete graph).">igraph_full</a></strong></span>(&amp;g, 10, IGRAPH_UNDIRECTED, IGRAPH_LOOPS);
     <span class="strong"><strong><a class="link" href="igraph-Iterators.html#igraph_vs_nonadj" title="2.3. igraph_vs_nonadj — Non-adjacent vertices of a vertex.">igraph_vs_nonadj</a></strong></span>(&amp;vs, 0, IGRAPH_ALL);
     <span class="strong"><strong><a class="link" href="igraph-Iterators.html#igraph_vit_create" title="5.1. igraph_vit_create — Creates a vertex iterator from a vertex selector.">igraph_vit_create</a></strong></span>(&amp;g, vs, &amp;vit);
     <span class="strong"><strong>while</strong></span> (!<span class="strong"><strong><a class="link" href="igraph-Iterators.html#IGRAPH_VIT_END" title="5.5. IGRAPH_VIT_END — Are we at the end?">IGRAPH_VIT_END</a></strong></span>(vit)) {
@@ -1114,20 +1114,35 @@ igraph_error_t igraph_vs_copy(igraph_vs_t* dest, const igraph_vs_t* src);
 </colgroup>
 <tbody>
 <tr>
+<td><p><span class="term"><em class="parameter"><code>dest</code></em>:</span></p></td>
+<td><p>
+  An uninitialized selector that will contain the copy.
+</p></td>
+</tr>
+<tr>
 <td><p><span class="term"><em class="parameter"><code>src</code></em>:</span></p></td>
 <td><p>
   The selector being copied.
 </p></td>
 </tr>
-<tr>
-<td><p><span class="term"><em class="parameter"><code>dest</code></em>:</span></p></td>
-<td><p>
-  An uninitialized selector that will contain the copy.</p></td>
-</tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
  
 </p>
 </div>
@@ -1263,14 +1278,35 @@ yield when it is iterated over.
 </p></td>
 </tr>
 <tr>
+<td><p><span class="term"><em class="parameter"><code>vs</code></em>:</span></p></td>
+<td><p>
+  the vertex selector.
+</p></td>
+</tr>
+<tr>
 <td><p><span class="term"><em class="parameter"><code>result</code></em>:</span></p></td>
 <td><p>
-  The result will be returned here.</p></td>
+  The result will be returned here.
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
  
 </p>
 </div>
@@ -2452,7 +2488,7 @@ all edges between those vertices.
 </p></td>
 </tr>
 <tr>
-<td><p><span class="term"><em class="parameter"><code>direectd</code></em>:</span></p></td>
+<td><p><span class="term"><em class="parameter"><code>directed</code></em>:</span></p></td>
 <td><p>
   If edge directions should be taken into account. This
      will be ignored if the graph to select from is undirected.
@@ -2604,7 +2640,7 @@ conventions.
 </colgroup>
 <tbody>
 <tr>
-<td><p><span class="term"><em class="parameter"><code>vs</code></em>:</span></p></td>
+<td><p><span class="term"><em class="parameter"><code>es</code></em>:</span></p></td>
 <td><p>
   Pointer to an uninitialized edge selector object.
 </p></td>
@@ -3473,12 +3509,27 @@ edges do not exist in the graph, this will result in an error.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>v</code></em>:</span></p></td>
 <td><p>
-  Pointer to initialized vector. The result will be stored here.</p></td>
+  Pointer to initialized vector. The result will be stored here.
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
 
 Time complexity: O(n), the number of edges in the selector.
  
@@ -3497,6 +3548,7 @@ igraph_error_t igraph_es_copy(igraph_es_t* dest, const igraph_es_t* src);
 <p>
 
 
+
 </p>
 <p><b>Arguments: </b>
 </p>
@@ -3507,20 +3559,36 @@ igraph_error_t igraph_es_copy(igraph_es_t* dest, const igraph_es_t* src);
 </colgroup>
 <tbody>
 <tr>
-<td><p><span class="term"><em class="parameter"><code>src</code></em>:</span></p></td>
-<td><p>
-  The selector being copied.
-</p></td>
-</tr>
-<tr>
 <td><p><span class="term"><em class="parameter"><code>dest</code></em>:</span></p></td>
 <td><p>
   An uninitialized selector that will contain the copy.
 </p></td>
 </tr>
+<tr>
+<td><p><span class="term"><em class="parameter"><code>src</code></em>:</span></p></td>
+<td><p>
+  The selector being copied.
+</p></td>
+</tr>
 </tbody>
 </table></div>
 <p>
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
+
 </p>
 <p><b>See also: </b></p>
 <div class="variablelist"><table border="0" class="variablelist">
@@ -3662,14 +3730,35 @@ yield when it is iterated over.
 </p></td>
 </tr>
 <tr>
+<td><p><span class="term"><em class="parameter"><code>es</code></em>:</span></p></td>
+<td><p>
+  The edge selector.
+</p></td>
+</tr>
+<tr>
 <td><p><span class="term"><em class="parameter"><code>result</code></em>:</span></p></td>
 <td><p>
-  The result will be returned here.</p></td>
+  The result will be returned here.
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
  
 </p>
 </div>
