--- a/c/html/master/igraph-Cycles.html
+++ b/c/html/master/igraph-Cycles.html
@@ -225,7 +225,7 @@ SIAM J. Comput. 4(1):77-84.
 </p></td>
 </tr>
 <tr>
-<td><p><span class="term"><em class="parameter"><code>max_cycle_length</code></em>:</span></p></td>
+<td><p><span class="term"><em class="parameter"><code>min_cycle_length</code></em>:</span></p></td>
 <td><p>
   Limit the minimum length of cycles to search for.
   Pass a negative value to search for all cycles.
@@ -235,12 +235,27 @@ SIAM J. Comput. 4(1):77-84.
 <td><p><span class="term"><em class="parameter"><code>max_cycle_length</code></em>:</span></p></td>
 <td><p>
   Limit the maximum length of cycles to search for.
-  Pass a negative value to search for all cycles.</p></td>
+  Pass a negative value to search for all cycles.
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
 
 </p>
 <p><b>See also: </b></p>
@@ -258,22 +273,6 @@ cycle;
 <a class="link" href="igraph-Cycles.html#igraph_fundamental_cycles" title="3.1. igraph_fundamental_cycles — Finds a fundamental cycle basis."><code class="function">igraph_fundamental_cycles()</code></a> and <a class="link" href="igraph-Cycles.html#igraph_minimum_cycle_basis" title="3.2. igraph_minimum_cycle_basis — Computes a minimum weight cycle basis."><code class="function">igraph_minimum_cycle_basis()</code></a>
 to find a cycle basis, a compact representation of the cycle structure
 of the graph.
-  </p></td>
-</tr></tbody>
-</table></div>
-<p>
-
-</p>
-<p><b>Returns: </b></p>
-<div class="variablelist"><table border="0" class="variablelist">
-<colgroup>
-<col align="left" valign="top">
-<col>
-</colgroup>
-<tbody><tr>
-<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
-<td><p>
-  Error code.
   </p></td>
 </tr></tbody>
 </table></div>
@@ -322,8 +321,6 @@ Johnson DB: Finding all the elementary circuits of a directed graph.
 SIAM J. Comput. 4(1):77-84.
 <a class="ulink" href="https://doi.org/10.1137/0204007" target="_top">https://doi.org/10.1137/0204007</a>
 
-See also: <a class="link" href="igraph-Cycles.html#igraph_simple_cycles_callback" title="1.3. igraph_simple_cycles_callback — Finds all simple cycles (callback version)."><code class="function">igraph_simple_cycles_callback()</code></a>
-
 </p>
 <p><b>Arguments: </b>
 </p>
@@ -351,7 +348,7 @@ See also: <a class="link" href="igraph-Cycles.html#igraph_simple_cycles_callback
 </p></td>
 </tr>
 <tr>
-<td><p><span class="term"><em class="parameter"><code>max_cycle_length</code></em>:</span></p></td>
+<td><p><span class="term"><em class="parameter"><code>min_cycle_length</code></em>:</span></p></td>
 <td><p>
   Limit the minimum length of cycles to search for.
   Pass a negative value to search for all cycles.
@@ -374,12 +371,27 @@ See also: <a class="link" href="igraph-Cycles.html#igraph_simple_cycles_callback
 <tr>
 <td><p><span class="term"><em class="parameter"><code>arg</code></em>:</span></p></td>
 <td><p>
-  This parameter will be passed to <em class="parameter"><code>callback</code></em>.</p></td>
+  This parameter will be passed to <em class="parameter"><code>callback</code></em>.
+</p></td>
 </tr>
 </tbody>
 </table></div>
 <p>
-
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
 
 </p>
 <p><b>See also: </b></p>
@@ -396,22 +408,6 @@ See also: <a class="link" href="igraph-Cycles.html#igraph_simple_cycles_callback
 <a class="link" href="igraph-Cycles.html#igraph_fundamental_cycles" title="3.1. igraph_fundamental_cycles — Finds a fundamental cycle basis."><code class="function">igraph_fundamental_cycles()</code></a> and igraph_minimum_cycle_basis()
 to find a cycle basis, a compact representation of the cycle structure
 of the graph.
-  </p></td>
-</tr></tbody>
-</table></div>
-<p>
-
-</p>
-<p><b>Returns: </b></p>
-<div class="variablelist"><table border="0" class="variablelist">
-<colgroup>
-<col align="left" valign="top">
-<col>
-</colgroup>
-<tbody><tr>
-<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
-<td><p>
-  Error code.
   </p></td>
 </tr></tbody>
 </table></div>
