--- a/c/html/master/igraph-Flows.html
+++ b/c/html/master/igraph-Flows.html
@@ -159,7 +159,7 @@ value.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>capacity</code></em>:</span></p></td>
 <td><p>
-  Vector containing the capacity of the edges. If NULL, then
+  Vector containing the capacity of the edges. If <code class="constant">NULL</code>, then
        every edge is considered to have capacity 1.0.
 </p></td>
 </tr>
@@ -167,7 +167,7 @@ value.
 <td><p><span class="term"><em class="parameter"><code>stats</code></em>:</span></p></td>
 <td><p>
   Counts of the number of different operations
-       preformed by the algorithm are stored here.
+       performed by the algorithm are stored here.
 </p></td>
 </tr>
 </tbody>
@@ -189,8 +189,8 @@ value.
 </table></div>
 <p>
 
-Time complexity: O(|V|^3). In practice it is much faster, but i
-cannot prove a better lower bound for the data structure i've
+Time complexity: O(|V|^3). In practice it is much faster, but I
+cannot prove a better lower bound for the data structure I've
 used. In fact, this implementation runs much faster than the
 <code class="constant">hi_pr</code> implementation discussed in
 B. V. Cherkassky and A. V. Goldberg: On implementing the
@@ -2683,7 +2683,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
     igraph_t block_tree;
     igraph_integer_t i;
 
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_famous" title="1.25. igraph_famous — Create a famous graph by simply providing its name.">igraph_famous</a></strong></span>(&amp;g, "zachary");
+    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_famous" title="1.27. igraph_famous — Create a famous graph by simply providing its name.">igraph_famous</a></strong></span>(&amp;g, "zachary");
     <span class="strong"><strong>igraph_vector_int_list_init</strong></span>(&amp;blocks, 0);
     <span class="strong"><strong>igraph_vector_int_init</strong></span>(&amp;cohesion, 0);
     <span class="strong"><strong>igraph_vector_int_init</strong></span>(&amp;parent, 0);
