--- a/c/html/master/igraph-Installation.html
+++ b/c/html/master/igraph-Installation.html
@@ -446,11 +446,12 @@ $ cmake --build . --target html
 </pre>
 <p>
     Building the HTML documentation requires Python 3, <code class="literal">xmlto</code>
-    and <code class="literal">source-highlight</code>. Building the PDF documentation also
-    requires <code class="literal">xsltproc</code>, <code class="literal">xmllint</code> and
-    <code class="literal">fop</code>. Building the Texinfo documentation also requires
-    the docbook2X package, <code class="literal">xmllint</code> and
-    <code class="literal">makeinfo</code>.
+    and <code class="literal">source-highlight</code>. On some platforms, it is necessary
+    to explicitly install the docbook-xsl package as well. Building the PDF
+    documentation also requires <code class="literal">xsltproc</code>,
+    <code class="literal">xmllint</code> and <code class="literal">fop</code>. Building the Texinfo
+    documentation also requires the docbook2X package, <code class="literal">xmllint</code>
+    and <code class="literal">makeinfo</code>.
   </p>
 </div>
 <div class="section">
